[package]
edition = "2024"
name = "quantum-pixel"
version = "2.0.3"
authors = ["Linos1391 <linos.coding@gmail.com>"]
homepage = "https://github.com/Linos1391/quantum-pixel.git"
description = "When both YES and NO are existed. Only human with emotions can comprehend."
readme = "quantum_pixel/README_PYPI.md"
license = "GNU General Public License v3 (GPLv3)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "stegano"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.28.2"
stegano-core = "0.6.1"
