[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "quantum-pixel"
dynamic = [
    "version",
    "authors",
    "description",
    "readme",
    "repository"
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "numpy>=2.4.0",
    "pillow>=12.0.0",
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
