[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "quantum-pixel"
authors = [
  { name = "Linos1391", email = "linos.coding@gmail.com" }
]
dynamic = [
    "version",
    "description",
    "readme"
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "numpy>=2.4.0",
    "pillow>=12.0.0",
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.urls]
repository = "https://github.com/Linos1391/quantum-pixel.git"
issues = "https://github.com/Linos1391/quantum-pixel/issues"
funding = "https://github.com/sponsors/Linos1391"

[project.scripts]
quantum_pixel = "quantum_pixel.main:main"

[tool.maturin]
module-name = "quantum_pixel.stegano"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
